--- a/starter/index.html
+++ b/starter/index.html
@@ -30,6 +30,7 @@
       <button class="btn btn--new">🔄 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
+      <button class="btn2 btn--howto">How to Play</button>
     </main>
     <script src="script.js"></script>
   </body>
